Added some samples
- List
- Table
- Image

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,titlepage]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[german]{babel}
+%Language of Document Elements like Figure or Table
+\usepackage[english]{babel}
 \usepackage[bookmarks]{hyperref}
 \usepackage{pdfpages}
 \usepackage{graphicx}
@@ -32,9 +33,9 @@
 % Smaler Table Space
 \renewcommand{\arraystretch}{1.5}
 
-\title{Projekttitel}
-\author{Vorname Nachname}
-\date{Datum}
+\title{Projecttitle}
+\author{Firstname Lastname}
+\date{Date}
 
 \begin{document}
 \pagenumbering{Roman} 
